--- a/config/.env.defaults
+++ b/config/.env.defaults
@@ -15,3 +15,7 @@ TS_DEV_LOGGER=false
 LOGGER_LEVEL=silent
 
 MONGO_CREATE_INDEX=true
+
+PRIVATE_KEY_FILE=./config/jwt/private.pem
+PRIVATE_KEY_PASSPHRASE=AUTFraseAcesso
+PUBLIC_KEY_FILE=./config/jwt/public.pem
