--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@types/bcrypt": "^5.0.2",
         "@types/dotenv-parse-variables": "^2.0.3",
         "@types/express": "^4.17.21",
+        "@types/jsonwebtoken": "^9.0.5",
         "@types/morgan": "^1.9.9",
         "@types/node": "^20.11.5",
         "@types/validator": "^13.11.8",
@@ -38,6 +39,7 @@
         "dotenv-parse-variables": "^2.0.0",
         "express": "^4.18.2",
         "express-openapi-validator": "^5.1.2",
+        "jsonwebtoken": "^9.0.2",
         "mongodb-memory-server": "^9.1.6",
         "mongoose": "^8.1.1",
         "morgan": "^1.10.0",
