--- a/config/.env.defaults
+++ b/config/.env.defaults
@@ -19,3 +19,5 @@ MONGO_CREATE_INDEX=true
 PRIVATE_KEY_FILE=./config/jwt/private.pem
 PRIVATE_KEY_PASSPHRASE=AUTFraseAcesso
 PUBLIC_KEY_FILE=./config/jwt/public.pem
+
+LOCAL_CACHE_TTL=60
