Implementando cache externo (redis-mock deprecado, não consegui fazer o mock pro ambiente de teste)

--- a/config/.env.prod
+++ b/config/.env.prod
@@ -4,5 +4,7 @@ MORGAN_LOGGER=true
 
 LOGGER_LEVEL=http
 
-MONGO_URL=mongodb://localhost/AncientOne
+MONGO_URL=mongodb+srv://ancientoneadmin:d7fY5jopFZiTjbK1@ancientonecluster.myxljp6.mongodb.net/
 MONGO_AUTO_INDEX=false
+
+REDIS_URL=redis://default:3ozo3kY8YIAjnbwsJJehibclo7gHzSuy@redis-14089.c267.us-east-1-4.ec2.cloud.redislabs.com:14089
